--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>de don mono</title>
+  <title>leonardo</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -102,3 +102,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
