--- a/fotos.html
+++ b/fotos.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>leonardo</title>
     <audio src="musica.mp3" autoplay></audio>
 
   <style>
@@ -840,4 +840,5 @@ h1 {
   <script src="anm.js"></script>
 
 </body>
+
 </html>
